# frd-score

./: .gitignore  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  radiomics_set0_results_tmp_path1_1714394370.csv  radiomics_set0_results_tmp_path1_1714399094.csv  radiomics_set0_results_tmp_path1_1714399262.csv  requirements.in  requirements.txt  setup.py  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml  tests.yaml
api/: index.html
changelog/: index.html
contributing/: index.html
docs/: api.md  changelog.md  contributing.md  faq.md  index.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: cli.md  interpretability.md  versions.md
docs/stylesheets/: extra.css
faq/: index.html
frd_v0/: README.md  noxfile.py  requirements.in  requirements.txt  setup.py
frd_v0/tests/: test_frd.py
frd_v1/: README.md  compute_frd.py  compute_rad.py  install.sh  ood_detection.py  pytest.ini  requirements.txt
frd_v1/configs/: 2D_extraction.yaml
frd_v1/src/: dataset.py  radiomics_utils.py  utils.py
frd_v1/tests/: test_frd.py
frd_v1_merged/: MANIFEST.in  README.md  mkdocs.yml  pyproject.toml  setup.py
frd_v1_merged/.github/workflows/: ci.yml  docs.yml
frd_v1_merged/docs/: contributing.md
frd_v1_merged/docs/guide/: cli.md  ood.md  versions.md
frd_v1_merged/src/frd_score/: __init__.py  frd.py
frd_v1_merged/src/frd_score/configs/: extraction_2d.yaml
frd_v1_merged/tests/: test_frd.py
guide/cli/: index.html
recipe/: meta.yaml
search/: search_index.json
tests/: test_frd.py
(+12 files in other folders)
